[package]
name = "hyperstone"
version = "0.1.0"
authors = ["Tarun Verghis <tarun.verghis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.0"
protobuf = "2.7"
nom-varint = "0.1"
snap = "0.2"

[build-dependencies]
protoc-rust = "2.7"
